--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Movie</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -31,7 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
@@ -50,6 +50,14 @@
           </div>
       </div>
     </nav>
+
+    <section id="Hero">
+      <div class="hero">
+        <video class="video"src="video/theboys.webm" autoplay muted></video>
+        <div class="container">
+        </div>
+      </div>
+    </section>
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
